@@ -16,11 +16,11 @@
 
 package com.adaptris.core.jms.activemq;
 
-import static com.adaptris.core.BaseCase.start;
-import static com.adaptris.core.BaseCase.stop;
-import static com.adaptris.core.BaseCase.waitForMessages;
-import static com.adaptris.core.jms.JmsProducerCase.assertMessages;
-import static com.adaptris.core.jms.JmsProducerCase.createMessage;
+import static com.adaptris.interlok.junit.scaffolding.BaseCase.start;
+import static com.adaptris.interlok.junit.scaffolding.BaseCase.stop;
+import static com.adaptris.interlok.junit.scaffolding.BaseCase.waitForMessages;
+import static com.adaptris.interlok.junit.scaffolding.jms.JmsProducerCase.assertMessages;
+import static com.adaptris.interlok.junit.scaffolding.jms.JmsProducerCase.createMessage;
 import static org.junit.Assert.fail;
 import java.util.Random;
 import java.util.concurrent.ThreadLocalRandom;
@@ -166,7 +166,7 @@ public class ActiveMqPasPollingConsumerTest {
     consumer.setSubscriptionId(MY_SUBSCRIPTION_ID);
     consumer.setReacquireLockBetweenMessages(true);
     consumer.setAdditionalDebug(true);
-    consumer.setReceiveTimeout(new TimeInterval(new Integer(new Random().nextInt(100) + 100).longValue(), TimeUnit.MILLISECONDS));
+    consumer.setReceiveTimeout(new TimeInterval(Integer.valueOf(new Random().nextInt(100) + 100).longValue(), TimeUnit.MILLISECONDS));
     StandaloneConsumer sc = new StandaloneConsumer(consumer);
     return sc;
   }
